syntax="proto3";

package cart;

option go_package = "/cart";

message Item {
  int32 id = 1;
  int32 user_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
}

message AddCartRequest {
  int32 uid = 1;
  int32 pid = 2;
  int32 quantity = 3;
}

message AddCartResponse {

}

message CartListRequest {
  int32 user_id = 1;
}

message CartListResponse {
  repeated Item items = 1;
}

message EmptyCartRequest {
  int32 user_id = 1;
}

message EmptyCartResponse {

}

service CartService {
  rpc AddCart(AddCartRequest) returns (AddCartResponse);
  rpc CartList(CartListRequest) returns (CartListResponse);
  rpc EmptyCart(EmptyCartRequest) returns (EmptyCartResponse);
}